--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,15 +2,60 @@
 <html lang="en">
 <head th:include="common::common" >
 </head>
+
+
+<link th:href="@{/bootstrap/table/bootstrap-table.min.css}" rel="stylesheet" />
+<script th:src="@{/bootstrap/table/bootstrap-table.min.js}"></script>
+<script th:src="@{/bootstrap/table/bootstrap-table-zh-CN.min.js}"></script>
 <body>
-    <div class="panel panel-default">
-        <!-- Default panel contents -->
-        <div class="panel-heading">Panel heading</div>
-
-        <!-- Table -->
-        <table class="table">
-
-        </table>
+<form class="form-horizontal" role="form">
+    <div class="form-group">
+        <label for="firstname" class="col-sm-1 control-label">名字</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="firstname" placeholder="请输入名字">
+        </div>
+        <label for="lastname" class="col-sm-1 control-label">手机号</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="lastname" placeholder="手机号码">
+        </div>
+        <div class=" col-sm-1">
+            <button type="submit" class="btn btn-default">查询</button>
+        </div>
     </div>
+</form>
+<div class="panel panel-default" style="height:80%">
+    <div class="panel-heading">
+        <h3 class="panel-title">
+            会员信息
+        </h3>
+    </div>
+    <div class="panel-body " >
+        <table id="table" ></table>
+    </div>
+</div>
+
+<script>
+    var $table = $('#table');
+    $table.bootstrapTable({
+        sidePagination:'server',
+        pagination:true,
+        showHeader:'true',
+        height:"420",
+        pageNumber:1,
+        pageSize :10,
+        url:"/data",
+        method:'post',
+        columns: [{
+            field: 'id',
+            title: 'Item ID'
+        }, {
+            field: 'name',
+            title: 'Item Name'
+        }, {
+            field: 'price',
+            title: 'Item Price'
+        }]
+    });
+</script>
 </body>
 </html>
